# DEVPOST-OpenAI-Build-Week-hackathon

./: .gitignore  LICENSE  NOTEBOOKPILOT_PLAN.md  README.md
Test notebook/: pakistan-housing.ipynb
docs/: agent-integration.md  architecture.md  benchmark-plan.md  demo-script.md  final-integration.md  frontend-bridge.md  gemini-runtime.md  notebook-context.md  notebook-detection.md  notebook-tools.md  protocol.md  prototype-baseline.md  release-baseline.md  release-checklist.md  validation.md
jupyter-chrome-agent/: README.md  inpage-panel.js  manifest.json  service-worker.js  sidepanel.css  sidepanel.html  sidepanel.js  tab-identity.js
jupyter-chrome-agent/bridge/: README.md  notebook_parser.py  requirements.txt  server.py
jupyter-chrome-agent/jupyterlab-bridge/: README.md  package-lock.json  package.json  setup.py  tsconfig.json
jupyter-chrome-agent/runtime/: README.md  agent_graph.py  checkpoint_store.py  gemini_agent.py  graph_state.py  langchain_client.py  quota_manager.py  requirements.txt  server.py  tool_contracts.py  tool_planner.py  workflow_graph.py
jupyter-chrome-agent/scripts/: live_smoke_test.py  package_extension.py  release_audit.py  validate_notebooks.py
jupyter-chrome-agent/server-extension/: README.md  pyproject.toml
jupyter-chrome-agent/server-extension/notebookpilot_server/: __init__.py  extension.py
jupyter-chrome-agent/tests/: test_agent_graph.py  test_checkpoint_store.py  test_gemini_agent.py  test_graph_state.py  test_quota_manager.py  (+5 more)
notebook-capability-probe/: CHANGELOG.md  README.md  esbuild.js  package-lock.json  package.json
(+14 files in other folders)
