[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "notebookpilot-jupyter-server-extension"
version = "0.1.0"
description = "Auto-start services for NotebookPilot in Jupyter Server."
requires-python = ">=3.9"
dependencies = ["jupyter-server>=2.0"]

[project.entry-points."jupyter_server.extension"]
notebookpilot = "notebookpilot_server"

[tool.setuptools.packages.find]
where = ["."]
